-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 20, 21
-
Component/s: hotspot
-
b07
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8301978 | 20.0.2 | Stefan Karlsson | P2 | Resolved | Fixed | b01 |
| JDK-8301974 | 20.0.1 | Stefan Karlsson | P2 | Resolved | Fixed | b05 |
| JDK-8300660 | 20 | Stefan Karlsson | P2 | Resolved | Fixed | b34 |
I propose that JFR doesn't walk the continuations when sending events. An alternative could be to limit this to ZGC, but I'd like to get some feedback around that from JFR / Loom devs.
- backported by
-
JDK-8300660 JfrVframeStream causes deadlocks in ZGC
-
- Resolved
-
-
JDK-8301974 JfrVframeStream causes deadlocks in ZGC
-
- Resolved
-
-
JDK-8301978 JfrVframeStream causes deadlocks in ZGC
-
- Resolved
-
- relates to
-
JDK-8298058 jdk/internal/vm/Continuation/Fuzz.java#default fails "assert(oopDesc::is_oop_or_null(val)) failed: bad oop found at 0xNNNN in_cont: 0 compressed: 0"
-
- Closed
-
- links to
-
Commit
openjdk/jdk20/1330d4ea
-
Commit
openjdk/jdk/453dbd12
-
Review
openjdk/jdk20/120
-
Review
openjdk/jdk/11586
-
Review
openjdk/jdk/11778