8298377: JfrVframeStream causes deadlocks in ZGC